# bsNet

./: .gitignore  AGENTS.md  BS-NET_TSD_Theory_v2_reviewed.docx  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  commit_script.sh  pyproject.toml  requirements.txt
artifacts/reports/: NetworkViz_offset_summary.csv  NetworkViz_per_network_pair.csv  NetworkViz_per_subject.csv  NetworkViz_per_subject_multioffset.csv  Table_ComponentNecessity.csv  ablation_results.csv  component_necessity.csv  component_necessity_ABIDE_cc200_N468.csv  component_necessity_Synthetic_50-900-120.csv  component_necessity_ds000243_cc200_N52.csv  component_necessity_ds000243_schaefer200_N52.csv  duration_sweep_seeds_aggregated.csv  duration_sweep_seeds_results.csv  failure_analysis.csv  failure_analysis_noise100.csv  failure_summary.txt  fc_stratification_4s256parcels_120s.csv  figure4_ari.csv  figure4_jaccard.csv  figure4_sliding_window.csv  figure4_topology.csv  noise_degradation.csv  per_network_jaccard_results.csv  per_network_jaccard_results_yeo100.csv  progressive_ablation_abide_cc200_N468.csv  progressive_ablation_ds000243_cc200_N52.csv  scale_up_100_results_20260326_165121.csv  scale_up_100_results_20260326_173716.csv  sensitivity_phase1.csv  sensitivity_phase2.csv  shrinkage_comparison.csv  stationarity_results.csv  stationarity_window_corr.csv  subnetwork_ari_results.csv  (+3 more)
configs/: diffusion_ts_fmri_phase1.yaml
docs/: 04_res_optimal_duration.md  06_pub_report_academic.md  07_pub_report_general.md  1.1_theory_concept.md  1.2_arch_pipeline.md  2.1_log_experiment_20260326.md  2.2_log_experiment_20260327.md  2.4_log_experiment_20260328_30.md  2.5_log_experiment_20260401.md  3.1_res_figure_legends.md  3.1_res_optimal_duration.md  3.2_res_abide_figure_legends.md  3.2_res_figure1_legends.md  3.3_res_adhd_figure_legends.md  3.3_res_figure2_legends.md  3.4_res_classification_legend.md  3.5_res_fc_intuition_legend.md  4.1_pub_report_academic.md  4.2_pub_report_general.md  5.10_figure_design_audit_20260410.md  5.11_storyline_figure_decision_matrix.md  5.12_methods_statistical_analysis.md  5.12_patient_utility_reliability_aware_clustering.md  5.13_adhd_discrimination_citation_guide.md  5.14_keane_reliability_gated_discrimination_design.md  5.15_project_full_storyline_report_20260420.md  5.16_tsd_theory_v2.md  5.17_signal_recovery_design.md  5.1_plan_refactoring.md  5.2_review_critical_analysis.md  5.3_defense_plan.md  5.4_defense_responses.md  5.5_methods_preprocessing.md  5.6_failure_characterization.md  5.7_stationarity_discussion.md  5.8_ceiling_effect_correction.md  5.9_manuscript_why_questions_and_figure_map.md  6.2_ops_real_data_pipeline.md  INDEX.md  LOCAL_SETUP_GUIDE.md  (+3 more)
scripts/: preprocess_bold.py  run_real_figure4.py  setup_env.sh
src/: __init__.py  main.py  plot_figure1_combined.py  run_real_data.py  run_real_data_scale.py  sweep_simulation.py
tests/: conftest.py  test_bootstrap.py  test_config.py  test_graph_metrics.py  test_pipeline.py  test_style.py
(+132 files in other folders)
