[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsNet"
version = "1.0.0"
description = "BS-NET: Fast-Extrapolation Functional Connectivity Pipeline for Short-Scan fMRI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "nilearn",
    "pandas",
    "matplotlib",
    "seaborn",
    "nibabel",
    "scikit-learn",
    "networkx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "isort",
]

# ── Formatting & Linting (PEP 8) ──────────────────────

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length는 black이 관리

[tool.ruff.lint.per-file-ignores]
# N806: neuroimaging 도메인 관례 변수 (fc_true_T, G, C, L 등)
"src/core/bootstrap.py" = ["N806"]
"src/core/pipeline.py" = ["N806"]
"src/core/graph_metrics.py" = ["N806"]
"src/scripts/*.py" = ["N806"]
"src/visualization/*.py" = ["N806"]
